# rust-arduino-blink

./: Cargo.toml  LICENSE  README.md  avr-atmega328p.json  flash.sh
.github/workflows/: ci.yml  rust.yml
src/: main.rs
